tests/supplementalGroups/allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-supplementalgroups-allowed
  labels:
    app: nginx-users
spec:
  securityContext:
    supplementalGroups:
      - 150
  containers:
    - name: nginx
      image: nginx
