tests/supplementalGroups/disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-supplementalgroups-disallowed
  labels:
    app: nginx-users
spec:
  securityContext:
    supplementalGroups:
      - 250
  containers:
    - name: nginx
      image: nginx
