tests/supplementalGroups/kubewarden.yaml
apiVersion: policies.kubewarden.io/v1alpha2
kind: ClusterAdmissionPolicy
metadata:
  name: supplementalgroups
spec:
  policyServer: default
  module: registry://ghcr.io/kubewarden/policies/user-group-psp:v1.1.5
  rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
    operations:
    - CREATE
    - UPDATE
  mutating: false
  settings:
    supplemental_groups: 
      rule: "MustRunAs"
      ranges:
        - min: 100
          max: 200
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - kubewarden
