tests/supplementalGroups/kyverno.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psp-supplementalgroups
spec:
  validationFailureAction: Enforce
  rules:
  - name: psp-supplementalgroup
    match:
      resources:
        kinds:
          - Pod
    validate:
      message: Any supplementalGroup ID must be within the range 100-200.
      pattern:
        spec:
          =(securityContext):
            =(supplementalGroups): 100-200
